--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ nav#searchNav {
     margin-top: 64px;
 }
 
+nav .btn {
+    text-transform: capitalize;
+}
+
 i.searchClose {
     position: absolute;
     top: 0;
@@ -22,6 +26,7 @@ i.searchClose {
     color: #9c27b0;
     cursor: pointer;
     font-size: 2rem;
+    -webkit-transition: .3s color;
     transition: .3s color;
 }
 
@@ -51,6 +56,7 @@ div.overlay {
 
 .catBox {
     padding: 3.5rem 0;
+    -webkit-transition: all ease-in-out .5s;
     transition: all ease-in-out .5s;
 }
 
