--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,24 @@
 nav a.brand-logo,
 nav ul li a {
-    color: purple;
+    color: #3e2723;
 }
 
 nav .container {
     width: 95%;
 }
 
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-nav#searchNav {
-    margin-top: 64px;
-}
-
 nav .btn {
     text-transform: capitalize;
 }
 
-i.searchClose {
-    position: absolute;
-    top: 0;
-    right: 1rem;
-    color: #9c27b0;
-    cursor: pointer;
-    font-size: 2rem;
-    -webkit-transition: .3s color;
-    transition: .3s color;
-}
-
-nav .input-field input[type="search"] {
-    padding-left: 4rem;
-    width: calc(100% - 8rem);
-    padding-right: 4rem;
-    font-size: 1.5rem;
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 section#banner {
     width: 100%;
-    /*height: calc( 100vh - 7rem );*/
-    background: url(../images/new.png) no-repeat fixed top;
+    height: calc( 100vh - 10rem);
+    background: url(../images/img8.jpg) no-repeat fixed top;
     background-size: 100%;
 }
 
@@ -52,19 +30,64 @@ div.overlay {
     background: rgba(0, 0, 0, 0.53);
     width: 100%;
     height: inherit;
-    padding: 5rem 0 0;
+    padding: 7rem 0 5rem;
 }
 
-.catBox {
-    padding: 3.5rem 0;
-    -webkit-transition: all ease-in-out .5s;
-    transition: all ease-in-out .5s;
+#searchField {
+    z-index: 1500;
+    background: rgba(33, 34, 34, .96);
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+    left: 0;
+    top: 0;
+    color: #888;
+    padding: 0rem 2rem;
 }
 
-.catBox:hover {
-    border: 1px solid white;
+#searchField #inner {
+    width: 100vw;
+    padding: 0 60px 0 116px;
 }
 
-.catIcon {
-    font-size: 4.5rem;
+#searchField #searchBox {
+    height: 74px;
+    margin-top: 3rem;
+    margin-left: 4rem;
+}
+
+#searchField .inner {
+    /*margin-top: 5rem;*/
+}
+
+#searchClose {
+    top: 1rem;
+}
+
+#searcharea {
+    float: left;
+    width: 90%;
+    height: 110%;
+    border: none;
+    padding: 0;
+    outline: none;
+    background: none;
+    white-space: pre-wrap!important;
+    word-wrap: break-word;
+    color: #f2f2f2;
+    overflow: hidden;
+    font-size: 3rem;
+    line-height: 100%;
+    font-weight: 400;
+    font-family: Gotham SSm A, Gotham SSm B, sans-serif;
+    box-shadow: 0 1px 0 0 rgba(242, 242, 242, 0.39);
+}
+
+#searcharea:focus {
+    box-shadow: 0 1px 0 0 rgba(242, 242, 242, 0.39);
+}
+
+.collection .collection-item {
+    background-color: rgba(255, 255, 255, 0);
 }
