--- a/css/style.css
+++ b/css/style.css
@@ -92,15 +92,15 @@ div.overlay {
     background-color: rgba(255, 255, 255, 0);
 }
 
-section#categories {
+section#categories .container {
     padding: 1.5rem 0 0;
     width: 95%;
 }
 
 section#categories header h4 {
     font-weight: 600;
-    font-family: roboto;
-    font-size: 1.7rem;
+    font-family: 'roboto';
+    font-size: 1.8rem;
 }
 
 #categories header h4 small {
@@ -126,10 +126,12 @@ section#categories header h4 {
 
 #categories_on_home .category_head {
     border-bottom: 1px solid;
-    max-width: 18rem;
-    font-family: lato;
-    font-weight: 400;
+    max-width: 26rem;
+    font-weight: 600;
     margin-left: 1rem;
+    padding: 7px;
+    font-size: 1.7rem;
+    border-radius: 4px;
 }
 
 #categories_on_home .card .card-action {
@@ -139,7 +141,6 @@ section#categories header h4 {
     padding: 10px 10px 0;
     font-size: 1.5rem;
     font-weight: 600;
-    font-family: 'lato';
     line-height: 1.5rem;
     margin-bottom: 0.5rem;
 }
