--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ section#categories header h4 {
     font-weight: 600;
     line-height: 1.5rem;
     margin-bottom: 0.5rem;
+    min-height: 6rem;
 }
 
 #categories_on_home .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
