--- a/css/style.css
+++ b/css/style.css
@@ -119,12 +119,12 @@ section#banner {
     background-color: rgba(255, 255, 255, 0);
 }
 
-section#categories .container {
+main#categories .container {
     padding: 1.5rem 0 0;
     width: 95%;
 }
 
-section#categories header h4 {
+main#categories header h4 {
     font-weight: 600;
     font-family: 'roboto';
     font-size: 1.8rem;
@@ -228,4 +228,21 @@ section#categories header h4 {
 .frik .card .card-content {
     padding: 1rem 1rem 0.6rem;
     border-radius: 0 0 2px 2px;
+}
+
+.blogPost_on_home .card .card-content .card-title {
+    font-weight: 400;
+    line-height: 100%;
+}
+
+.blogPost_on_home .card .card-title small {
+    font-size: 65%;
+}
+
+.blogPost_on_home .card .card-content {
+    padding: 10px 20px 20px;
+}
+
+.blogPost_on_home .card .card-content p {
+    margin: 0.6rem 0rem 0rem;
 }
