--- a/css/style.css
+++ b/css/style.css
@@ -246,3 +246,30 @@ main#categories header h4 {
 .blogPost_on_home .card .card-content p {
     margin: 0.6rem 0rem 0rem;
 }
+
+#frikIdeas .demo_chat_box {
+    min-height: 16rem;
+    padding: 0rem 1.5rem;
+}
+
+#frikIdeas .demo_chat_box .cht {
+    max-width: 20rem;
+    padding: 5px 0 5px;
+    color: white;
+    border-radius: 1rem 0rem;
+}
+
+#frikIdeas .demo_chat_box .cht.right .col.s10 {
+    margin-right: -1rem;
+}
+
+#frikIdeas .demo_chat_box .cht .chtIcon {
+    margin-top: -1.5rem;
+}
+
+.demo_chat_box header {
+    width: 112.3%;
+    margin-left: -1.5rem;
+    padding: 0.5rem 2rem;
+    font-size: 1.5rem;
+}
